; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Console.c_ConsoleLocalWrite.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Console.c_ConsoleLocalWrite.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i32] [i32 37, i32 115, i32 37, i32 115, i32 0], align 4
@.str.1 = private unnamed_addr constant [2 x i32] [i32 10, i32 0], align 4
@.str.2 = private unnamed_addr constant [1 x i32] zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ConsoleLocalWrite(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %11, label %8

8:                                                ; preds = %2
  %9 = load i32*, i32** %5, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %11, label %12

11:                                               ; preds = %8, %2
  store i32 0, i32* %3, align 4
  br label %24

12:                                               ; preds = %8
  %13 = load i32*, i32** %5, align 8
  %14 = load i32*, i32** %5, align 8
  %15 = call i64 @UniEndWith(i32* %14, i8* bitcast ([2 x i32]* @.str.1 to i8*))
  %16 = icmp ne i64 %15, 0
  %17 = zext i1 %16 to i64
  %18 = select i1 %16, i32* getelementptr inbounds ([1 x i32], [1 x i32]* @.str.2, i64 0, i64 0), i32* getelementptr inbounds ([2 x i32], [2 x i32]* @.str.1, i64 0, i64 0)
  %19 = bitcast i32* %18 to i8*
  %20 = call i32 @UniPrint(i8* bitcast ([5 x i32]* @.str to i8*), i32* %13, i8* %19)
  %21 = load i32*, i32** %4, align 8
  %22 = load i32*, i32** %5, align 8
  %23 = call i32 @ConsoleWriteOutFile(i32* %21, i32* %22, i32 1)
  store i32 1, i32* %3, align 4
  br label %24

24:                                               ; preds = %12, %11
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @UniPrint(i8*, i32*, i8*) #1

declare dso_local i64 @UniEndWith(i32*, i8*) #1

declare dso_local i32 @ConsoleWriteOutFile(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
